tests/file_parser/snapshots/tests__file_parser__block_at_start_1_config.snap
---
source: tests/file_parser/mod.rs
description: "# bois_config\n# template: true\n# bois_config\n\nAfter block\n"
expression: config
---
template: true
