tests/file_parser/snapshots/tests__file_parser__block_in_middle_0_pre_content.snap
---
source: tests/file_parser/mod.rs
description: "\nBefore block\n\n# bois_config\n# template: true\n# bois_config\n\nAfter block\n\n"
expression: pre_config_block
---

Before block
