tests/file_parser/snapshots/tests__file_parser__block_in_middle_1_config.snap
---
source: tests/file_parser/mod.rs
description: "\nBefore block\n\n# bois_config\n# template: true\n# bois_config\n\nAfter block\n\n"
expression: config
---
template: true
