tests/file_parser/snapshots/tests__file_parser__block_with_empty_lines_1_config.snap
---
source: tests/file_parser/mod.rs
description: "# bois_config\n#\n# template: true\n#\n# bois_config\n\nAfter block\n"
expression: config
---
template: true
