tests/file_parser/snapshots/tests__file_parser__block_with_empty_lines_2_post_content.snap
---
source: tests/file_parser/mod.rs
description: "# bois_config\n#\n# template: true\n#\n# bois_config\n\nAfter block\n"
expression: post_config_block
---

After block
