tests/file_parser/snapshots/tests__file_parser__no_block_0_pre_content.snap
---
source: tests/file_parser/mod.rs
description: "Before block\nWithout a config block\n"
expression: pre_config_block
---
Before block
Without a config block
